<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <item
       android:id="@+id/about_us"
       android:title="@string/about_us"
       android:icon="@drawable/baseline_group_24"
       />

    <!--    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy" />
     -->
    <item
        android:id="@+id/check_for_updates"
        android:title="@string/check_for_updates"
        android:icon="@drawable/baseline_update_24"/>
    <item
        android:id="@+id/share_app"
        android:title="@string/share_this_app"
        android:icon="@drawable/baseline_share_24"/>
    <item
        android:id="@+id/rate_us"
        android:title="@string/rate_us"
        android:icon="@drawable/baseline_star_rate_24"/>
</menu>