<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/white"
    tools:context=".EngineeringBranchesActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/engineering_branches"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:id="@+id/computer_science"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/syllabus"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/computer_science_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="@string/computer_engineering"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/computer_science_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/computer_engineering_img"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/computerimg" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/civil_engineering"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_science">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/previous_year_question_papers"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/civil_engineering_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="@string/civil_engineering"
                android:textColor="#00FFFF"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/civil_engineering_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/civil_engineering"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/civilimg"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mechanical_engineering"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civil_engineering">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/results"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/mechanical_engineering_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="@string/mechanical_engineering"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/mechanical_engineering_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/mechanical_engineering"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/mechanicalimg"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/electrical_engineering"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp"
        app:layout_constraintBottom_toTopOf="@+id/electronics_engineering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mechanical_engineering">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/aboutus"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/electrical_engineering_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="@string/electrical_engineering"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />


            <ImageView
                android:id="@+id/electrical_engineering_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/electrical_img"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/electricalimg"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/electronics_engineering"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electrical_engineering">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/aboutus"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/electronics_engineering_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="@string/electronics_engineering"
                android:textColor="#00FFFF"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/electronics_engineering_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/electronics_engineering"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/electronicsimg"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>